// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Loading Skeleton Block 1`] = `
.c0 {
  position: relative;
  border-radius: 0.25rem;
  overflow: hidden;
  --bg-opacity: 1;
  background-color: rgba(210,214,220,var(--bg-opacity));
  display: block;
  height: 100%;
}

.c0::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
  background-image: linear-gradient( 90deg, rgba(255,255,255,0) 0, rgba(255,255,255,0.2) 20%, rgba(255,255,255,0.5) 60%, rgba(255,255,255,0) );
  -webkit-animation: efYAKb 2s infinite;
  animation: efYAKb 2s infinite;
  content: '';
}

.c1 {
  width: 12rem;
  height: 16rem;
}

<span
  className="c0 c1"
/>
`;

exports[`Storyshots Atoms/Loading Skeleton Inline 1`] = `
.c0 {
  position: relative;
  border-radius: 0.25rem;
  overflow: hidden;
  --bg-opacity: 1;
  background-color: rgba(210,214,220,var(--bg-opacity));
  display: inline-block;
  height: 1.25rem;
}

.c0::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
  background-image: linear-gradient( 90deg, rgba(255,255,255,0) 0, rgba(255,255,255,0.2) 20%, rgba(255,255,255,0.5) 60%, rgba(255,255,255,0) );
  -webkit-animation: efYAKb 2s infinite;
  animation: efYAKb 2s infinite;
  content: '';
}

<span
  className="c0 w-20"
/>
`;
